# HyperNEAT

./: .gitignore  LICENSE  README  buildAll.sh
Board/: CMakeLists.txt  ChangeLog  Doxyfile  TODO
Board/doc/: fig-format.html
Board/examples/: arrows.cpp  koch.cpp  ruler.cpp  scale_ellipse.cpp
Board/include/: Board.h
Board/include/board/: Color.h  PSFonts.h  Path.h  Point.h  Rect.h  ShapeList.h  ShapeList.ih  Shapes.h  (+5 more)
Board/src/: Board.cpp  Color.cpp  PSFonts.cpp  Path.cpp  Rect.cpp  ShapeList.cpp  Shapes.cpp  Tools.cpp  Transforms.cpp
JGTL/: CMakeLists.txt  Info.txt
JGTL/JGTL_API/: Doxyfile
JGTL/examples/: CircularBuffer.cpp  PoolMap.cpp  QuickProf.cpp  StackMap.cpp  Units.cpp  Variant.cpp
JGTL/include/: JGTL_Bar.h  JGTL_CircularBuffer.h  JGTL_CircularBufferInterface.h  JGTL_CommandLineParser.h  JGTL_ConsoleColor.h  JGTL_DataManager.h  JGTL_DataPool_delete.h  JGTL_DynamicCircularBuffer.h  JGTL_DynamicPoolMap.h  JGTL_DynamicPoolSet.h  JGTL_Email.h  JGTL_FloatingUnits.h  JGTL_FractionValue.h  JGTL_HexTree.h  JGTL_Index2.h  JGTL_Index3.h  JGTL_IntegralUnits.h  JGTL_InterpolatedValue.h  JGTL_InterpolatedValue.h~  JGTL_LocatedException.h  JGTL_MapInterface.h  JGTL_OctTree.h  JGTL_PolyVariant.h  JGTL_PoolMap_delete.h  JGTL_QuadTree.h  JGTL_Quadratic.h  JGTL_QuickProf.h  JGTL_Random.h  JGTL_Range.h  JGTL_Range.h~  JGTL_Ray2.h  JGTL_Ray3.h  JGTL_Rectangle3.h  JGTL_Serialization.h  JGTL_SetInterface.h  JGTL_Singleton.h  JGTL_Sleep.h  JGTL_SortedList_delete.h  JGTL_StackCircularBuffer.h  JGTL_StackMap.h  (+13 more)
JGTL/tests/: ColorTests.cpp  LeastSquares.cpp  MapTests.cpp  RandomTests.cpp  RayInterceptTest.cpp  TargetIntercept.cpp  TreeTests.cpp  VariantTests.cpp
fuego-0.4/: AUTHORS  CMakeLists.txt  Makefile.am  NEWS  README  TODO  configure.ac
fuego-0.4/book/: Makefile.am
fuego-0.4/fuegomain/: FuegoMain.cpp  FuegoMainEngine.cpp  FuegoMainEngine.h  FuegoMainUtil.cpp  FuegoMainUtil.h  Makefile.am
fuego-0.4/fuegotest/: FuegoTestEngine.cpp  FuegoTestEngine.h  FuegoTestMain.cpp  Makefile.am
fuego-0.4/go/: GoAssertBoardRestored.h  GoAutoBook.cpp  GoAutoBook.h  GoBensonSolver.cpp  GoBensonSolver.h  GoBlock.cpp  GoBlock.h  GoBoard.cpp  GoBoard.h  GoBoardCheckPerformance.cpp  GoBoardCheckPerformance.h  GoBoardHistory.cpp  GoBoardHistory.h  GoBoardRestorer.cpp  GoBoardRestorer.h  GoBoardSynchronizer.cpp  GoBoardSynchronizer.h  GoBoardUpdater.cpp  GoBoardUpdater.h  GoBoardUtil.cpp  GoBoardUtil.h  GoBook.cpp  GoBook.h  GoChain.cpp  GoChain.h  GoEyeCount.cpp  GoEyeCount.h  GoEyeUtil.cpp  GoEyeUtil.h  GoGame.cpp  GoGame.h  GoGtpCommandUtil.cpp  GoGtpCommandUtil.h  GoGtpEngine.cpp  GoGtpEngine.h  GoGtpExtraCommands.cpp  GoGtpExtraCommands.h  GoGtpTimeSettings.cpp  GoGtpTimeSettings.h  GoInfluence.cpp  (+46 more)
fuego-0.4/gouct/: GoUctBoard.cpp  GoUctBoard.h  GoUctBookBuilder.h  GoUctBookBuilderCommands.h  GoUctCommands.cpp  GoUctCommands.h  GoUctDefaultPriorKnowledge.cpp  GoUctDefaultPriorKnowledge.h  GoUctDefaultRootFilter.cpp  GoUctDefaultRootFilter.h  GoUctEstimatorStat.cpp  GoUctEstimatorStat.h  GoUctGlobalSearch.cpp  GoUctGlobalSearch.h  GoUctObjectWithSearch.cpp  GoUctObjectWithSearch.h  GoUctPatterns.h  GoUctPlayer.h  GoUctPlayoutPolicy.cpp  GoUctPlayoutPolicy.h  GoUctPureRandomGenerator.h  GoUctRootFilter.cpp  GoUctRootFilter.h  GoUctSearch.cpp  GoUctSearch.h  GoUctUtil.cpp  GoUctUtil.h  Makefile.am
fuego-0.4/gtpengine/: GtpEngine.cpp  GtpEngine.h  GtpInputStream.cpp  GtpInputStream.h  GtpOutputStream.cpp  GtpOutputStream.h  Makefile.am
fuego-0.4/m4/: ax_boost_filesystem.m4  ax_boost_program_options.m4  ax_boost_system.m4
fuego-0.4/misctests/: Makefile.am  check_regression_files.sh
fuego-0.4/regression/: 19.list  19.suite  Makefile.am  backfill.tst  basics.suite  basics_fuegotest.list  basics_uct.list  blunder_long_ladder_19.tst  blunder_play_near_dead_19.tst  blunder_rave.tst  blunder_selfatari_19.tst  blunder_short_ladder_19.tst  book_moves.tst  cleanup_japanese_rules.tst  escape_capture_19.tst  eval_life_and_death.tst  eval_seki.tst  final_moves.tst  free_handicap.tst  kgs-genmove_cleanup.tst  ladder.tst  performance.list  performance.suite  performance_eval_pro_9x9.tst  performance_icgc2008.tst  performance_middlegame_hard_9x9.tst  performance_pro_9x9.tst  repetition.tst  run.sh  simpleplayers.tst  static_safety.list  static_safety.suite  static_safety_basics.tst  static_safety_from_semeai.tst  static_safety_fullboard.tst  tactics_19.tst  uct.list  uct.suite  uct_basics.tst  uct_blunder.tst  (+17 more)
fuego-0.4/simpleplayers/: Makefile.am  SpAveragePlayer.cpp  SpAveragePlayer.h  SpCapturePlayer.cpp  SpCapturePlayer.h  SpDumbTacticalPlayer.cpp  SpDumbTacticalPlayer.h  SpGreedyPlayer.cpp  SpGreedyPlayer.h  SpInfluencePlayer.cpp  SpInfluencePlayer.h  SpLadderPlayer.cpp  SpLadderPlayer.h  SpLibertyPlayer.cpp  SpLibertyPlayer.h  SpMaxEyePlayer.cpp  SpMaxEyePlayer.h  SpMinLibPlayer.cpp  SpMinLibPlayer.h  SpMoveGenerator.cpp  SpMoveGenerator.h  SpRandomPlayer.cpp  SpRandomPlayer.h  SpSafePlayer.cpp  SpSafePlayer.h  SpSimplePlayer.cpp  SpSimplePlayer.h  SpUtil.cpp  SpUtil.h
fuego-0.4/smartgame/: Makefile.am  SgArray.h  SgBWArray.h  SgBWSet.h  SgBlackWhite.h  SgBoardColor.h  SgBoardConst.cpp  SgBoardConst.h  SgBookBuilder.cpp  SgBookBuilder.h  SgCmdLineOpt.cpp  SgCmdLineOpt.h  SgConnCompIterator.cpp  SgConnCompIterator.h  SgDebug.cpp  SgDebug.h  SgEBWArray.h  SgEvaluatedMoves.cpp  SgEvaluatedMoves.h  SgEvaluatedMoves.h.bak  SgException.cpp  SgException.h  SgFastLog.cpp  SgFastLog.h  SgGameReader.cpp  SgGameReader.h  SgGameWriter.cpp  SgGameWriter.h  SgGtpClient.cpp  SgGtpClient.h  SgGtpCommands.cpp  SgGtpCommands.cpp.bak  SgGtpCommands.h  SgGtpUtil.cpp  SgGtpUtil.h  SgHash.h  SgHashTable.h  SgIncrementalStack.cpp  SgIncrementalStack.h  SgInit.cpp  (+82 more)
fuego-0.4/unittestmain/: Makefile.am  UnitTestMain.cpp
fuego-0.4/website/: copy.sh  fuego-screenshot.html  index.html
tinyxmldll/: CMakeLists.txt  README.txt
tinyxmldll/include/: tinystrdll.h  tinyxmlplus.h
tinyxmldll/src/: tinystrdll.cpp  tinyxmlerrorplus.cpp  tinyxmlparserplus.cpp  tinyxmlplus.cpp
zlib/: CMakeLists.txt  minigzip.c
(+1015 files in other folders)
