ACLOCAL_AMFLAGS = -I m4

SUBDIRS = \
book \
regression \
misctests \
gtpengine \
smartgame \
go \
gouct \
simpleplayers \
fuegomain \
fuegotest \
unittestmain

# TODO: This shouldn't include the non-portable makefile doc/Makefile
# Maybe use ax_prog_doxygen.m4 from the autoconf archive?
EXTRA_DIST = \
TODO \
doc/doxygen/Makefile \
doc/doxygen/fuegomain/Makefile \
doc/doxygen/fuegomain/doxygen.cfg \
doc/doxygen/fuegomain/pages/mainpage.cpp \
doc/doxygen/fuegotest/Makefile \
doc/doxygen/fuegotest/doxygen.cfg \
doc/doxygen/fuegotest/pages/mainpage.cpp \
doc/doxygen/general/Makefile \
doc/doxygen/general/doxygen.cfg \
doc/doxygen/general/pages/autotools.cpp \
doc/doxygen/general/pages/generalreleases.cpp \
doc/doxygen/general/pages/mainpage.cpp \
doc/doxygen/general/pages/modules.cpp \
doc/doxygen/general/pages/portability.cpp \
doc/doxygen/general/pages/style.cpp \
doc/doxygen/go/Makefile \
doc/doxygen/go/doxygen.cfg \
doc/doxygen/go/pages/goboardhash.cpp \
doc/doxygen/go/pages/goboardko.cpp \
doc/doxygen/go/pages/gonotes.cpp \
doc/doxygen/go/pages/mainpage.cpp \
doc/doxygen/gouct/Makefile \
doc/doxygen/gouct/doxygen.cfg \
doc/doxygen/gouct/pages/mainpage.cpp \
doc/doxygen/gtpengine/Makefile \
doc/doxygen/gtpengine/doxygen.cfg \
doc/doxygen/gtpengine/pages/mainpage.cpp \
doc/doxygen/pages/doxygen.css \
doc/doxygen/pages/footer.html \
doc/doxygen/pages/go.jpg \
doc/doxygen/pages/header.html \
doc/doxygen/pages/index.html \
doc/doxygen/pages/main.html \
doc/doxygen/pages/toc.html \
doc/doxygen/simpleplayers/Makefile \
doc/doxygen/simpleplayers/doxygen.cfg \
doc/doxygen/simpleplayers/pages/mainpage.cpp \
doc/doxygen/smartgame/Makefile \
doc/doxygen/smartgame/doxygen.cfg \
doc/doxygen/smartgame/pages/mainpage.cpp \
doc/doxygen/smartgame/pages/sgnotes.cpp \
doc/manual/index.html

