noinst_LIBRARIES = libfuego_go.a

libfuego_go_a_SOURCES = \
GoAutoBook.cpp \
GoBensonSolver.cpp \
GoBlock.cpp \
GoBoard.cpp \
GoBoardCheckPerformance.cpp \
GoBoardHistory.cpp \
GoBoardRestorer.cpp \
GoBoardSynchronizer.cpp \
GoBoardUpdater.cpp \
GoBoardUtil.cpp \
GoBook.cpp \
GoChain.cpp \
GoEyeCount.cpp \
GoEyeUtil.cpp \
GoGame.cpp \
GoGtpCommandUtil.cpp \
GoGtpEngine.cpp \
GoGtpExtraCommands.cpp \
GoGtpTimeSettings.cpp \
GoInfluence.cpp \
GoInit.cpp \
GoKomi.cpp \
GoLadder.cpp \
GoMotive.cpp \
GoNodeUtil.cpp \
GoPlayer.cpp \
GoPlayerMove.cpp \
GoRegion.cpp \
GoRegionBoard.cpp \
GoRegionUtil.cpp \
GoRules.cpp \
GoSafetyCommands.cpp \
GoSafetySolver.cpp \
GoSafetyUtil.cpp \
GoSearch.cpp \
GoSetupUtil.cpp \
GoStaticLadder.cpp \
GoStaticSafetySolver.cpp \
GoTimeControl.cpp \
GoUtil.cpp

noinst_HEADERS = \
GoAssertBoardRestored.h \
GoAutoBook.h \
GoBensonSolver.h \
GoBlock.h \
GoBoard.h \
GoBoardCheckPerformance.h \
GoBoardHistory.h \
GoBoardRestorer.h \
GoBoardSynchronizer.h \
GoBoardUpdater.h \
GoBoardUtil.h \
GoBook.h \
GoChain.h \
GoEyeCount.h \
GoEyeUtil.h \
GoGame.h \
GoGtpCommandUtil.h \
GoGtpEngine.h \
GoGtpExtraCommands.h \
GoGtpTimeSettings.h \
GoInfluence.h \
GoInit.h \
GoKomi.h \
GoLadder.h \
GoModBoard.h \
GoMotive.h \
GoMoveExecutor.h \
GoNodeUtil.h \
GoPlayer.h \
GoPlayerMove.h \
GoRegion.h \
GoRegionBoard.h \
GoRegionUtil.h \
GoRules.h \
GoSafetyCommands.h \
GoSafetySolver.h \
GoSafetyUtil.h \
GoSearch.h \
GoSetup.h \
GoSetupUtil.h \
GoSortedMoves.h \
GoStaticLadder.h \
GoStaticSafetySolver.h \
GoTimeControl.h \
GoUtil.h

libfuego_go_a_CPPFLAGS = \
$(BOOST_CPPFLAGS) \
-I@top_srcdir@/gtpengine \
-I@top_srcdir@/smartgame

DISTCLEANFILES = *~
